# hcli

./: CHANGELOG.md  README.md  cabal.project  flake.nix  hcli.cabal  hie.yaml  result
app/: CabalFileOperations.hs  Cli.hs  Common.hs  Main.hs  Operations.hs
tests/: Spec.hs
