cabal-version:      2.4
name:               hcli
version:            0.1.0.0
author:             Dmitrii Skurihin
maintainer:         dmitrii.sk@gmail.com
extra-source-files: CHANGELOG.md

executable hcli
    main-is:          Main.hs
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
