cabal-version:      2.4
name:               hcli
version:            0.1.0.0
maintainer:         dmitrii.sk@gmail.com
author:             Dmitrii Skurihin
extra-source-files: CHANGELOG.md

executable hcli
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:
        Operations
        CabalFileOperations
        Common
        Cli

    default-language: Haskell2010
    build-depends:
        base ^>=4.14.1.0,
        Cabal ==3.6.2.0,
        cabal-install-parsers ^>=0.4.5,
        shelly ^>=1.10.0,
        filepath,
        cli ^>=0.2.0,
        text,
        regex-compat

test-suite hcli-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   tests app
    other-modules:
        Cli
        Common

    default-language: Haskell2010
    build-depends:
        base,
        cli,
        regex-compat,
        text,
        hspec
