cabal-version:      2.4
name:               hcli
version:            0.1.0.0
maintainer:         dmitrii.sk@gmail.com
author:             Dmitrii Skurihin
extra-source-files: CHANGELOG.md

executable hcli-exe
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:
        Operations
        CabalFileOperations
        Common
        Cli

    default-language: Haskell2010
    build-depends:
        base,
        Cabal,
        cabal-install-parsers,
        shelly,
        filepath,
        cli,
        text,
        regex-compat

test-suite hcli-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   tests app
    other-modules:
        Cli
        Common

    default-language: Haskell2010
    build-depends:
        base,
        cli,
        regex-compat,
        text,
        hspec
